--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1 data-testid="slackUserName">Onyinyechi</h1>
+<h1 data-testid="slackUserName">ORJI ONYINYECHI</h1>
 
 <!-- Slack Display Picture -->
-<img src="https://ca.slack-edge.com/T02GKDL87FH-U05GJ3ZLG0H-f7db288fdaa3-512" alt="Your Slack Username" data-testid="slackDisplayImage">
+<img src="https://ca.slack-edge.com/T02GKDL87FH-U05GJ3ZLG0H-f7db288fdaa3-512" alt="ORJI ONYINYECHI" data-testid="slackDisplayImage">
 
 <!-- Current Day of the Week -->
 <p data-testid="currentDayOfTheWeek"></p>
